# ethzasl_msf_noros

./: .gitignore  CMakeLists.txt  README.md  TODO
dataset/pose_msf/: imu.txt  vicon.txt  vicon.yaml
dataset/pose_msf/fast_turn/: imu_spc_sep.txt  loam_pose_spc_sep.txt
include/msf_core/: config.h  eigen_conversions.h  msf_IMUHandler_NOROS.h  msf_macros.h  msf_measurement.h  msf_sensormanager.h  msf_state.h  similaritytransform.h
include/msf_core/implementation/: msf_state_inl.h
include/msf_struct/: DoubleArrayStamped.h  DoubleMatrixStamped.h  ExtEkf.h  ExtState.h  Header.h  Imu.h  NavSatFix.h  NavSatStatus.h  Odometry.h  Point.h  PointStamped.h  PointWithCovarianceStamped.h  Pose.h  PoseStamped.h  PoseWithCovariance.h  PoseWithCovarianceStamped.h  Quaternion.h  Transform.h  TransformStamped.h  Twist.h  TwistWithCovariance.h  Vector3.h  structs.h
include/msf_updates/pose_sensor_handler/: pose_sensorhandler.h
include/msf_updates/pose_sensor_handler/implementation/: pose_sensorhandler.hpp
include/msf_updates/position_sensor_handler/: position_measurement.h  position_sensorhandler.h
include/msf_updates/position_sensor_handler/implementation/: position_sensorhandler.hpp
include/msf_updates/pressure_sensor_handler/: pressure_measurement.h  pressure_sensorhandler.h
include/msf_updates/pressure_sensor_handler/implementation/: pressure_sensorhandler.hpp
include/msf_updates/spherical_position_sensor/: spherical_measurement.h  spherical_sensorhandler.h
include/msf_updates/spherical_position_sensor/implementation/: spherical_sensorhandler.hpp
src/: CMakeLists.txt
src/msf_core/: CMakeLists.txt  config.cpp  gps_conversion.cc
src/msf_timing/: CMakeLists.txt
src/msf_updates/: CMakeLists.txt
src/msf_updates/msf_distort/: PoseDistorter.cc
src/msf_updates/pose_position_msf/: msf_statedef.hpp  my_types.h  pose_msf_lins_test.cpp  pose_msf_test.cpp  pose_sensormanager_noros.h
